# notes-web-app

./: pyproject.toml
migrations/versions/: 3649b044cac2_.py
src/notes/: __init__.py  config.py  models.py
